clusters/homelab/apps/redirect/network-policy.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-to-local-network
  namespace: redirect
spec:
  endpointSelector:
    matchLabels:
      app: unifi
  egress:
    - toCIDR:
        - "192.168.1.0/24"
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
