clusters/homelab/apps/redirect/valetudo.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: valetudo-egress-to-local-network
  namespace: redirect
spec:
  podSelector:
    matchLabels:
      app: valetudo
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 192.168.3.96/32
      ports:
      - protocol: TCP
        port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: valetudo
  namespace: redirect
  labels:
    app: valetudo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: valetudo
  template:
    metadata:
      labels:
        app: valetudo
    spec:
      containers:
      - name: socat
        image: alpine/socat:1.8.1.1
        args: ["-v", "tcp-listen:443,reuseaddr,fork", "tcp:192.168.3.96:80"]
        ports:
        - containerPort: 443
        securityContext:
          runAsUser: 0
          runAsGroup: 0
          allowPrivilegeEscalation: false
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: valetudo
  namespace: redirect
  labels:
    app: valetudo
spec:
  selector:
    app: valetudo
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
  type: ClusterIP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: valetudo
  namespace: redirect
  # labels:
  #   external-dns: "true"
spec:
  parentRefs:
    - name: services
      namespace: infra
      sectionName: main
  hostnames: [
    "valetudo.klimlive.de"
  ]
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: valetudo
          port: 443
